--- a/redux_to_do_list/.htaccess
+++ b/redux_to_do_list/.htaccess
@@ -1,4 +1,4 @@
-RewriteBase /
+RewriteBase /redux_to_do_list
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
