--- a/redux_to_do_list/.htaccess
+++ b/redux_to_do_list/.htaccess
@@ -1,5 +1,5 @@
-RewriteBase /redux_to_do_list/
-RewriteRule ^index\.html$ - [L]
+RewriteEngine On
+RewriteBase /y/directory/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+RewriteRule (.*) ./ [QSA,L]
