--- a/redux_to_do_list/.htaccess
+++ b/redux_to_do_list/.htaccess
@@ -1,5 +1,7 @@
-RewriteEngine On
-RewriteBase /redux_to_do_list/
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.*) ./ [QSA,L]
+<ifModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteBase /redux_to_do_list/
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule (.*) ./ [QSA,L]
+</ifModule>
